--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.2",
     "@telegram-apps/sdk": "^1.1.3",
     "@telegram-apps/sdk-react": "^1.1.3",
     "lodash-es": "^4.17.21",
